--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-bcrypt==4.1.3
-blinker==1.8.1
-cachelib==0.13.0
-certifi==2024.2.2
-click==8.1.7
-colorama==0.4.6
-dnspython==2.6.1
-Flask==3.0.3
-Flask-Bcrypt==1.0.1
-Flask-Session==0.8.0
-itsdangerous==2.2.0
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-msgspec==0.18.6
-PyJWT==2.8.0
-pymongo==4.7.1
-python-dotenv==1.0.1
-Werkzeug==3.0.2
+bcrypt
+blinker==1.4
+cachelib
+certifi==2021.5.30
+click==7.1.2
+colorama==0.4.4
+dnspython==1.16.0
+Flask==1.1.2
+Flask-Bcrypt
+Flask-Session
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+PyJWT
+pymongo==3.11.4
+python-dotenv==0.15.0
+Werkzeug==1.0.1
